OntraportApi.NET

What's New

v1.2.7 (2023-03-16)
- Fix some parsing problems reading transaction offers
- Bool fields can now read either string or int
- Enable parsing of non-nullable Bool fields
- Enable parsing of non-nullable DateTimeOffset fields
- Enable parsing of Decimal fields
- Added product type "single" (any difference with "onetime"?)

v1.2.6 (2023-03-15)
- TOverride now applies to select conditions, sort and listFields (but not externs)
- Fix a crash with .NET 4.8 with GET requests
- Raised framework dependency to .NET 5.0 for AspNetCore and IdentityCore

v1.2.5 (2021-05-08)
- Fixed a data parsing bug

v1.2.4 (2020-10-15)
- ApiTransaction.Offer property is now writeable, useful for unit testing
- OntraportUserStore now implements IUserTwoFactorStore, IUserPhoneNumberStore and IUserSecurityStampStore
- TOverride is now passed correctly to base classes

TOverride allows switching between Live and Dev Ontraport accounts where field keys are different. TOverride was difficult to use due to always requiring creating model classes of derived types. One option was to add a CreateModel on the base class and make the model constructors internal, but this made it harder to use the classes.

I've changed the approach with TOverride to always use the T model classes and automatically replace field names between T and TOverride when reading and writing data. The mapping is done via reflection. It has a performance cost, but reflection is only done on the first call and the override map is then cached for each class type. Furthermore, TOverride is only used for development and this code is skipped in production.

The usage is transparent to the user, but the field override definition is different. Model keys are now defined as "public const string" on class T and "public new const string" on TOverride. This avoids polluting the model quick view with extra properties, and the "new" ensures the constant names match in both classes.


v1.2.3 (2020-10-08)